fix: header buttons on tablet view

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -156,6 +156,10 @@
       object-fit: contain
       border-radius: 2px
 
+  @include responsive(tablet)
+    .nav-links
+      padding-left: 10px
+
   @include responsive(mobile)
     .hamburger
       display: block
